# django_setup

./: .env.example  .gitignore  Dockerfile  README.md  docker-command.txt  docker-compose.yml  pyproject.toml  requirements.txt
apps/main_app/: apps.py  urls.py  views.py
src/: settings.py  urls.py
templates/: 404.html  500.html  index.html
