[tool.poetry]
name = "django-setup"
version = "0.1.0"
description = ""
authors = ["sudip <sudip@m46brands.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
django-environ = "^0.12.0"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
